# sgx-pwenclave

./: Makefile  README.md  cscope.in.out  cscope.out  cscope.po.out
App/: App.cpp  CMakeLists.txt
Enclave/: CMakeLists.txt  Enclave.cpp  blockwise.cpp  handy.h  pwenclave.c  pwenclave_t.h  sha256.cpp
